<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.MoviesFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/sdefault_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_strdefault"
            android:checked="true"
            app:checkedIconTint="@color/secondary_color"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/sname_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:checkedIconTint="@color/secondary_color"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/svote_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_average"
            app:checkedIconTint="@color/secondary_color"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fav_shows"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        tools:listitem="@layout/item_row"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>