<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movies"
        android:icon="@drawable/nav_home_selector"
        android:title="Movies" />

    <item
        android:id="@+id/tvshows"
        android:icon="@drawable/nav_search_selector"
        android:title="Tv Shows" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/nav_favorite_selector"
        android:title="Favorite" />

</menu>